- 添加 AppId、PageId 级联参数，将 DragDropStateService 中的拖拽状态按照页面隔离 - MetaSchema 各字段设置短名称，减少序列化 json 文件存储大小

--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/ButtonWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/ButtonWrap.razor
@@ -1,9 +1,7 @@
-﻿@inherits DesignEngineComponentBase
-
-<Button Type="@ButtonType.Primary">@Text</Button>
+﻿<Button Type="@ButtonType.Primary">@Text</Button>
 
 @code {
     [Parameter]
-    public int Text { get; set; }
+    public string Text { get; set; }
 
 }
