- 将 HttpClient 改为 IHttpClientFactory - 修复基于已有元数据渲染容器组件的 bug - 修复表单模板渲染 bug - MetaSchema 针对没有值的属性增加 JsonIgnore 忽略序列化，减少 json 文件体积

--- a/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
@@ -1,5 +1,21 @@
 ﻿@page "/admin/myapps"
 
+<Card Title="用例系统" Style="float:left; width:300px; margin:5px;">
+    <Extra>
+        <a href="/myapp/pagemanager/caseapp">管理</a>
+    </Extra>
+    <Body>
+        <p>展示不同类型页面案例</p>
+    </Body>
+</Card>
+<Card Title="测试系统" Style="float:left; width:300px; margin:5px;">
+    <Extra>
+        <a href="/myapp/pagemanager/testapp">管理</a>
+    </Extra>
+    <Body>
+        <p>测试不同页面设计场景</p>
+    </Body>
+</Card>
 <Card Title="图书管理系统" Style="float:left; width:300px; margin:5px;">
     <Extra>
         <a href="/myapp/pagemanager/appid">管理</a>
