--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/CardWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/CardWrap.razor
@@ -5,7 +5,7 @@
         <a>More</a>
     </Extra>
     <Body>
-        <DropItemContainer ContainerComponent="@CreatComponent("card-1")" Style="min-height:90px; height:auto; background: #f4f7fa;"></DropItemContainer>
+        <DropItemContainer ContainerComponent="@CreateComponent("card-1", (component)=>{ component.ComponentStyle.DefaultStyle="min-height:90px; height:auto; background: #f4f7fa;";})"></DropItemContainer>
     </Body>
 </Card>
 
