--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridWrap.razor
@@ -9,7 +9,7 @@
            {
                 string key = $"gridcontainer-{rr}-{c}";
                 <GridCol Span="@(24/Cols)" Style="width:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;">
-                    <DropItemContainer ContainerComponent="@CreatComponent(key)"></DropItemContainer>
+                    <DropItemContainer ContainerComponent="@CreateComponent(key)"></DropItemContainer>
                 </GridCol>
            }
         </GridRow>
