--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/LayoutWrap.razor
@@ -2,10 +2,10 @@
 
 <Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
-        <DropItemContainer ContainerComponent="@CreatComponent("layoutcontainer-sider")"></DropItemContainer>
+        <DropItemContainer ContainerComponent="@CreateComponent("layoutcontainer-sider")"></DropItemContainer>
     </Sider>
     <Content Style="height: 100%;">
-        <DropItemContainer ContainerComponent="@CreatComponent("layoutcontainer-content")"></DropItemContainer>
+        <DropItemContainer ContainerComponent="@CreateComponent("layoutcontainer-content")"></DropItemContainer>
     </Content>
 </Layout>
 
