--- a/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/PageTemplates/FormTemplate.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.ExtensionComponents/PageTemplates/FormTemplate.razor
@@ -1,53 +1,44 @@
 ﻿@inherits DesignEngineComponentBase
 
-<DropItemContainer ContainerComponent="@CreatComponent("formcontainer")"></DropItemContainer>
+<DropItemContainer ContainerComponent="@CreateComponent("formcontainer")"></DropItemContainer>
 
 @* 表单提交、取消按钮 *@
 <DropItemContainer ContainerComponent="@CreatComponent_FormButton()"></DropItemContainer>
 
 @code {
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+    }
+
     protected ComponentSchema CreatComponent_FormButton()
     {
-        var component = CreatComponent("formcontainer_buttom");
+        var component = CreateComponent("formcontainer_buttom");
         if (component.Childrens.Count != 0)
             return component;
 
         //设置自定义样式
         component.ComponentStyle.DefaultStyle = "width: 200px; height: 85px; position:fixed; bottom:20px; right: 280px;";
 
-        ComponentSchema submitComponent = new("button")
-        {
-            IsHiddenTitle = true,
-            ComponentFragments =
-            [
-                        new(){ Index = 0, FragmentEnum = FragmentEnum.Component, ComponentFragmentName = typeof(ButtonWrap).GetFullNameWithAssemblyName() },
-                new(){ Index = 1, FragmentEnum = FragmentEnum.Parameter, Name = "Text", ValueType = ComponentValueType.String, StringValue = "提交" }
-            ],
-            ComponentProperty = new()
-            {
-                Title = "提交",
-                ComponentValueType = ComponentValueType.None
-            },
-            ComponentStyle = new()
-            {
-                ItemWidth = 12,
-                ItemHeight = 40
-            }
-        };
-        submitComponent.ParentId = component.Id;
-        component.Childrens.Add(submitComponent);
+        CreateButton("提交", component);
+        CreateButton("取消", component);
 
-        ComponentSchema cancelComponent = new("button")
+        return component;
+    }
+
+    private ComponentSchema CreateButton(string title, ComponentSchema component)
+    {
+        ComponentSchema formComponent = new("button")
             {
                 IsHiddenTitle = true,
                 ComponentFragments =
-                [
-                            new(){ Index = 0, FragmentEnum = FragmentEnum.Component, ComponentFragmentName = typeof(ButtonWrap).GetFullNameWithAssemblyName() },
-                    new(){ Index = 1, FragmentEnum = FragmentEnum.Parameter, Name = "Text", ValueType = ComponentValueType.String, StringValue = "取消" }
-                ],
+                        [
+                                    new(){ Index = 0, FragmentEnum = FragmentEnum.Component, ComponentFragmentName = typeof(ButtonWrap).GetFullNameWithAssemblyName() },
+                new(){ Index = 1, FragmentEnum = FragmentEnum.Parameter, Name = "Text", ValueType = ComponentValueType.String, StringValue = title }
+                        ],
                 ComponentProperty = new()
                 {
-                    Title = "取消",
+                    Title = title,
                     ComponentValueType = ComponentValueType.None
                 },
                 ComponentStyle = new()
@@ -56,9 +47,8 @@
                     ItemHeight = 40
                 }
             };
-        cancelComponent.ParentId = component.Id;
-        component.Childrens.Add(cancelComponent);
-
-        return component;
+        formComponent.ParentId = component.Id;
+        component.Childrens.Add(formComponent);
+        return formComponent;
     }
 }
