--- a/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/RenderTemplates/FormTemplate.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine.AntBlazor/RenderTemplates/FormTemplate.razor
@@ -1,6 +1,6 @@
 ﻿@page "/form/{PageId}/{DataId}"
 
-@inject HttpClient HttpClient
+@inject IHttpClientFactory HttpClientFactory
 @inject IRender Render
 @inject NavigationManager NavigationManager
 
@@ -34,7 +34,9 @@
     private async Task PageRenderAsync()
     {
         string url = $"{NavigationManager.BaseUri}jsonschema/form/{PageId}.json?_={DateTime.Now.Ticks}";
-        var pageSchema = await HttpClient.GetFromJsonAsync<PageSchema>(url);
+
+        var httpClient = HttpClientFactory.CreateClient();
+        var pageSchema = await httpClient.GetFromJsonAsync<PageSchema>(url);
 
         RenderFragment = Render.Render(pageSchema, PageRenderType.Form);
     }
@@ -47,6 +49,7 @@
     {
         string url = $"{NavigationManager.BaseUri}form/LoadData?id={DataId}";
 
-        var formData = await HttpClient.PostAsJsonAsync<PageSchema>(url, null);
+        var httpClient = HttpClientFactory.CreateClient();
+        var formData = await httpClient.PostAsJsonAsync<PageSchema>(url, null);
     }
 }
